--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
   <!-- Blog Cards -->
   <div class="container my-5">
-    <h2 class="text-center mb-4">Latest Posts</h2>
+    <h2 class="text-center mb-4 fw-bold ">Latest Posts</h2>
     <div class="row g-4">
       
       <!-- Blog Card 1 -->
       <div class="col-md-6 col-lg-4">
         <div class="card shadow-sm h-100">
-          <img src="https://picsum.photos/400/200?random=1" class="card-img-top" alt="Blog Image">
+          <img src="./modetn-city-luxury-center-dubai-united-arab-emirates.jpg" class="card-img-top" alt="Blog Image">
           <div class="card-body">
-            <h5 class="card-title">Blog Post One</h5>
-            <p class="card-text">This is a short description of the blog post. It gives a quick idea about the content.</p>
+            <h5 class="card-title">Discover Dubai: A City of Wonders</h5>
+            <p class="card-text">From the iconic Burj Khalifa to luxury shopping and desert safaris, Dubai blends modern marvels with rich traditions.</p>
             <a href="#" class="btn btn-primary">Read More</a>
           </div>
         </div>
@@ -50,10 +50,10 @@
       <!-- Blog Card 2 -->
       <div class="col-md-6 col-lg-4">
         <div class="card shadow-sm h-100">
-          <img src="https://picsum.photos/400/200?random=2" class="card-img-top" alt="Blog Image">
+          <img src="./beautiful-wide-shot-eiffel-tower-paris-surrounded-by-water-with-ships-colorful-sky.jpg" class="card-img-top" alt="Blog Image">
           <div class="card-body">
-            <h5 class="card-title">Blog Post Two</h5>
-            <p class="card-text">Another blog description here. Bootstrap makes it easy to design responsive layouts.</p>
+            <h5 class="card-title">Paris: The City of Love and Lights</h5>
+            <p class="card-text">Explore the charm of the Eiffel Tower, the art at the Louvre, and the cozy cafés that make Paris unforgettable.</p>
             <a href="#" class="btn btn-primary">Read More</a>
           </div>
         </div>
@@ -62,10 +62,10 @@
       <!-- Blog Card 3 -->
       <div class="col-md-6 col-lg-4">
         <div class="card shadow-sm h-100">
-          <img src="https://picsum.photos/400/200?random=3" class="card-img-top" alt="Blog Image">
+          <img src="./beautiful-tropical-beach-sea.jpg" class="card-img-top" alt="Blog Image">
           <div class="card-body">
-            <h5 class="card-title">Blog Post Three</h5>
-            <p class="card-text">Cards are flexible and support different content types like text, buttons, and images.</p>
+            <h5 class="card-title">Goa: Beaches, Sunsets & Adventure</h5>
+            <p class="card-text">Famous for golden beaches, vibrant nightlife, and Portuguese heritage, Goa is India’s favorite coastal paradise.</p>
             <a href="#" class="btn btn-primary">Read More</a>
           </div>
         </div>
