--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       
       <!-- Blog Card 1 -->
       <div class="col-md-6 col-lg-4">
-        <div class="card shadow-sm h-100">
+        <div class="card shadow-md h-100">
           <img src="./modetn-city-luxury-center-dubai-united-arab-emirates.jpg" class="card-img-top" alt="Blog Image">
           <div class="card-body">
             <h5 class="card-title">Discover Dubai: A City of Wonders</h5>
@@ -49,7 +49,7 @@
 
       <!-- Blog Card 2 -->
       <div class="col-md-6 col-lg-4">
-        <div class="card shadow-sm h-100">
+        <div class="card shadow-md h-100">
           <img src="./beautiful-wide-shot-eiffel-tower-paris-surrounded-by-water-with-ships-colorful-sky.jpg" class="card-img-top" alt="Blog Image">
           <div class="card-body">
             <h5 class="card-title">Paris: The City of Love and Lights</h5>
@@ -61,7 +61,7 @@
 
       <!-- Blog Card 3 -->
       <div class="col-md-6 col-lg-4">
-        <div class="card shadow-sm h-100">
+        <div class="card shadow-md h-100">
           <img src="./beautiful-tropical-beach-sea.jpg" class="card-img-top" alt="Blog Image">
           <div class="card-body">
             <h5 class="card-title">Goa: Beaches, Sunsets & Adventure</h5>
